  * improve memory usage and speed of revision log markup (issue #477)
  * fix broken annotation view in CVS keyword-bearing files (issue #479)
  * warn users when query results are incomplete (issue #443)
  * avoid parsing errors on RCS newphrases in the admin section (issue #483)
  * make rlog parsing code more robust in certain error cases (issue #444)

Version 1.1.10 (released 15-Mar-2011)

  * fix stack trace in Subversion revision info logic (issue #475, issue #476)

Version 1.1.9 (released 18-Feb-2011)

  * vcauth universal access determinations (issue #425)
  * rework svn revision info cache for performance
  * make revision log "extra pages" count configurable
  * fix Subversion 1.4.x revision log compatibility code regression
  * display sanitized error when authzfile is malformed
  * handle file:/// Subversion rootpaths as local roots (issue #446)
  * restore markup of URLs in file contents (issue #455)
  * optionally display last-committed metadata in roots view (issue #457)

Version 1.1.8 (released 02-Dec-2010)

  * fix slowness triggered by allow_compress=1 configuration (issue #467)
  * allow use of 'fcrypt' for Windows standalone.py authn support (issue #471)
  * yield more useful error on directory markup/annotate request (issue #472)

Version 1.1.7 (released 09-Sep-2010)

  * display Subversion revision properties in the revision view (issue #453)
  * fix exception in 'standalone.py -r REPOS' when run without a config file
  * fix standalone.py server root deployments (--script-alias='')
  * add Basic authentication support to standalone.py (Unix only) (issue #49)
  * fix obscure "unexpected NULL parent pool" Subversion bindings error
  * enable path info / link display in remote Subversion root revision view
  * fix vhost name case handling inconsistency (issue #466)
  * use svn:mime-type property charset param as encoding hint
  * markup Subversion revision references in log messages (issue #313)